# repository.verkurkie

./: .gitignore  .gitmodules  README.md  _generate-repo.bat  _push-github.bat  _repo_generator.py  addon.xml  build.py  build_release.py  changelog.txt  generator.py  index.html  pyproject.toml  repository.verkurkie-1.0.3.zip.md5
.github/workflows/: build_deploy.yml  build_release.yml  release.yml  update-submodule.yml
repo/repository.verkurkie/: CHANGELOG.md  addon.xml  changelog.txt
repo/zips/: addons.xml  addons.xml.md5
repo/zips/repository.verkurkie/: addon.xml  repository.verkurkie-1.0.3.zip.md5
repo/zips/script.iptv.xtream-to-m3u/: addon.xml  script.iptv.xtream-to-m3u-1.1.2.zip.md5
