[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "repository.verkurkie"
version = "0.0.1"
description = "Verkurkie Kodi Repository build scripts"
requires-python = ">=3.8"
dependencies = [
    "python-dotenv",
    "paramiko",
]

[project.optional-dependencies]
dev = [
    "python-semantic-release",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["addon.xml:version"]
branch = "main"
upload_to_pypi = false
build_command = "python3 generator.py --zip --transfer --changelog"
commit_parser = "conventional"

[tool.semantic_release.commit_parser_options]
major_tags = ["major"]
minor_tags = ["feat"]
patch_tags = ["fix", "refactor"]

[tool.semantic_release.publish]
upload_to_vcs_release = false
