[project]
name = "repository.verkurkie"
description = "Verkurkie Kodi Repository"
requires-python = ">=3.8"
dependencies = [
    "python-dotenv",
    "paramiko",
]

[project.optional-dependencies]
dev = [
    "python-semantic-release",
]

[tool.semantic_release]
version_variable = "addon.xml:version"
branch = "main"
upload_to_pypi = false
build_command = ""
commit_parser = "conventional"

[tool.semantic_release.commit_parser_options]
major_tags = ["major"]
minor_tags = ["feat"]
patch_tags = ["fix", "refactor"]

[tool.semantic_release.publish]
upload_to_vcs_release = false

[tool.semantic_release.changelog]
enabled = false