[build-system]
requires = ["setuptools>=61.0"]
build_backend = "setuptools.build_meta"

[project]
name = "repository.verkurkie"
version = "1.0.1"
description = "Verkurkie Kodi Repository"
requires-python = ">=3.8"
dependencies = [
    "python-dotenv",
    "paramiko",
]

[project.optional-dependencies]
dev = [
    "python-semantic-release",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["addon.xml:version"]
branch = "main"
upload_to_pypi = false
build_command = "python generator.py --zip --transfer"
build_command_env = ["GH_TOKEN", "GITHUB_TOKEN", "FTP_HOST", "FTP_USER", "FTP_PASS"]
commit_parser = "conventional"
commit_message = "chore: bump version to {version} [skip ci]"
commit_additional_files = ["changelog.txt"]

[tool.semantic_release.commit_parser_options]
major_tags = ["major"]
minor_tags = ["feat"]
patch_tags = ["fix", "refactor"]

[tool.semantic_release.publish]
upload_to_vcs_release = false

[tool.semantic_release.changelog]
enabled = false